# timefence

./: .gitignore  404.html  CHANGELOG.md  CONTRIBUTING.md  README.md  index.html  objects.inv  pyproject.toml  search.json  sitemap.xml  zensical.toml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  docs.yml  release.yml
api/: index.html
api/audit/: index.html
api/diff/: index.html
api/explain/: index.html
api/feature/: index.html
api/featureset/: index.html
api/labels/: index.html
api/source/: index.html
api/store/: index.html
benchmarks/: bench.py  results.json
cli/: index.html
cli/audit/: index.html
cli/catalog/: index.html
cli/diff/: index.html
cli/doctor/: index.html
cli/explain/: index.html
cli/init/: index.html
cli/inspect/: index.html
cli/quickstart/: index.html
concepts/caching/: index.html
concepts/embargo/: index.html
concepts/join-logic/: index.html
concepts/splits/: index.html
concepts/temporal-correctness/: index.html
docs/: CNAME  README.md  documentation.html  index.html  index.md
docs/api/: audit.md  build.md  diff.md  explain.md  feature.md  featureset.md  index.md  labels.md  source.md  store.md
docs/cli/: audit.md  build.md  catalog.md  diff.md  doctor.md  explain.md  index.md  init.md  inspect.md  quickstart.md
docs/concepts/: caching.md  embargo.md  join-logic.md  splits.md  temporal-correctness.md
docs/getting-started/: installation.md  quickstart.md
docs/guides/: audit.md  build.md  ci.md
docs/reference/: configuration.md  durations.md  errors.md  troubleshooting.md
getting-started/installation/: index.html
getting-started/quickstart/: index.html
guides/audit/: index.html
guides/ci/: index.html
reference/configuration/: index.html
reference/durations/: index.html
reference/errors/: index.html
reference/troubleshooting/: index.html
src/timefence/: __init__.py  _constants.py  _duration.py  _sql_utils.py  cli.py  core.py  engine.py  errors.py  quickstart.py  store.py
stylesheets/: extra.css
tests/: conftest.py  test_cli.py  test_config.py  test_core.py  test_duration.py  test_engine.py  test_errors.py  test_integration.py  test_property.py  test_sql_safety.py  test_store.py
