[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "timefence"
version = "0.9.1"
description = "Temporal correctness layer for ML training data"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "Gauthier Piarrette" }]
keywords = [
    "machine-learning",
    "data-leakage",
    "point-in-time",
    "temporal-correctness",
    "feature-engineering",
    "ml-training",
    "data-quality",
    "mlops",
    "time-series",
    "audit",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Software Development :: Quality Assurance",
    "Typing :: Typed",
]
dependencies = [
    "duckdb>=1.0.0",
    "click>=8.0.0",
    "rich>=13.0.0",
    "pandas>=1.5.0",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
notebook = ["ipython>=7.0.0"]
dbt = ["dbt-core>=1.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "hypothesis>=6.0.0",
    "ruff>=0.4.0",
    "taskipy>=1.12.0",
    "pre-commit>=3.0.0",
]
all = [
    "ipython>=7.0.0",
    "dbt-core>=1.0.0",
]

[project.scripts]
timefence = "timefence.cli:cli"

[project.urls]
Homepage = "https://timefence.dev"
Documentation = "https://timefence.dev/documentation.html"
Repository = "https://github.com/gauthierpiarrette/timefence"
Issues = "https://github.com/gauthierpiarrette/timefence/issues"
Changelog = "https://github.com/gauthierpiarrette/timefence/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/timefence"]

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = [
    "E501", # line too long — handled by formatter; strings may exceed
]

[tool.taskipy.tasks]
lint = "ruff check src/ tests/"
format = "ruff format src/ tests/"
format-check = "ruff format --check src/ tests/"
test = "pytest tests/ --ignore=tests/test_property.py"
test-all = "pytest tests/"
check = "task lint && task format-check && task test"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
markers = [
    "slow: marks tests as slow (run with pytest -m slow)",
]
